<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:visibility="gone"
        android:textColor="@android:color/holo_red_dark"
        android:text="Please enter valid expression"
        android:textSize="20dp"
        android:id="@+id/error_message"
        android:gravity="center"
        android:layout_height="50dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp" >


        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/edit_text"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/equal_button"
            android:onClick="evaluateExpression"
            android:text="=" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:onClick="getTextFromButton"

            android:text="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:onClick="getTextFromButton"

            android:text="2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:onClick="getTextFromButton"
            android:text="3" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:onClick="getTextFromButton"
            android:text="+" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:onClick="getTextFromButton"
            android:text="4" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:onClick="getTextFromButton"

            android:text="5" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:onClick="getTextFromButton"
            android:text="6" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:onClick="getTextFromButton"
            android:text="-" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:onClick="getTextFromButton"
            android:text="7" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:onClick="getTextFromButton"

            android:text="8" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:onClick="getTextFromButton"
            android:text="9" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:onClick="getTextFromButton"
            android:text="*" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:onClick="getTextFromButton"
            android:text="0" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:onClick="clearTextField"

            android:text="CLR" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:onClick="getLastAns"
            android:text="ANS" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:onClick="getTextFromButton"
            android:text="/" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:onClick="showHistory"
            android:text="HIS" />


    </LinearLayout>



</LinearLayout>
