<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/error_message"
        android:text="Invalid Login Credentials"
        android:visibility="gone"
        android:layout_marginTop="50dp"
        android:textSize="24sp"
        android:textColor="#FF0000"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
   <EditText
       android:id="@+id/userName"
       android:layout_width="200dp"
       android:hint="User Name"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       android:layout_marginTop="200dp"
       android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/userPassword"
        android:layout_width="200dp"
        android:hint="Password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userName"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userPassword"
        android:layout_marginTop="50dp"
        android:text="Login"/>

</androidx.constraintlayout.widget.ConstraintLayout>